// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifItem /> debe de hacer match con el snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Saitama"
      src="https://one-punch.com/saitama.jpg"
    />
    <p>
      Saitama
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene q 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que  1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que hacer match con el snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que hacer match con el snapshot 2`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que mostra 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que mostrar la imagen con la URL y el ALT ind 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;

exports[`Pruebas en GifItem Tiene que mostrar la imagen con la URL y el ALT indicado 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Luffy"
      src="https://lufy.com/lufy.jpg"
    />
    <p>
      Luffy
    </p>
  </div>
</div>
`;
